syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

import "gateway.proto";

package runc;

service RunCService {
  rpc RunCKill(RunCKillRequest) returns (RunCKillResponse) {}
  rpc RunCStatus(RunCStatusRequest) returns (RunCStatusResponse) {}
  rpc RunCExec(RunCExecRequest) returns (RunCExecResponse) {}
  rpc RunCStreamLogs(RunCStreamLogsRequest) returns (stream RunCLogEntry) {}
  rpc RunCArchive(RunCArchiveRequest) returns (stream RunCArchiveResponse) {}
  rpc RunCSyncWorkspace(gateway.SyncContainerWorkspaceRequest)
      returns (gateway.SyncContainerWorkspaceResponse) {}
  rpc RunCSandboxExec(RunCSandboxExecRequest)
      returns (RunCSandboxExecResponse) {}
  rpc RunCSandboxStatus(RunCSandboxStatusRequest)
      returns (RunCSandboxStatusResponse) {}
  rpc RunCSandboxStdout(RunCSandboxStdoutRequest)
      returns (RunCSandboxStdoutResponse) {}
  rpc RunCSandboxStderr(RunCSandboxStderrRequest)
      returns (RunCSandboxStderrResponse) {}
}

message RunCKillRequest { string container_id = 1; }

message RunCKillResponse { bool ok = 1; }

message RunCExecRequest {
  string container_id = 1;
  string cmd = 2;
  repeated string env = 3;
}

message RunCExecResponse { bool ok = 1; }

message RunCStatusRequest { string container_id = 1; }

message RunCStatusResponse { bool running = 1; }

message RunCStreamLogsRequest { string container_id = 1; }

message RunCLogEntry { string msg = 1; }

message RunCArchiveRequest {
  string container_id = 1;
  string image_id = 2;
}

message RunCArchiveResponse {
  bool done = 1;
  bool success = 2;
  int32 progress = 3;
  string error_msg = 4;
}

message RunCSandboxExecRequest {
  string container_id = 1;
  string cmd = 2;
  string cwd = 3;
  map<string, string> env = 4;
  bool interactive = 5;
}

message RunCSandboxExecResponse {
  bool ok = 1;
  string error_msg = 2;
  int32 pid = 3;
}

message RunCSandboxStatusRequest {
  string container_id = 1;
  int32 pid = 2;
}

message RunCSandboxStatusResponse {
  bool ok = 1;
  string error_msg = 2;
  string status = 3;
  int32 exit_code = 4;
}

message RunCSandboxStdoutRequest {
  string container_id = 1;
  int32 pid = 2;
}

message RunCSandboxStdoutResponse {
  bool ok = 1;
  string error_msg = 2;
  string stdout = 3;
}

message RunCSandboxStderrRequest {
  string container_id = 1;
  int32 pid = 2;
}

message RunCSandboxStderrResponse {
  bool ok = 1;
  string error_msg = 2;
  string stderr = 3;
}
